tests/paczka1/fuzzy1/68812494.err
Error in line 4: vDw3 S51 94,6
Error in line 14: 6zQesA8gt A851 82,2
Error in line 11: aaTh S654 69,8
Error in line 13: vDw3 S654 81,5
Error in line 16: 6zQesA8gt S654 88,8
Error in line 29: vDw3 A851 227,16
Error in line 25: S550 S51 41,1
Error in line 24: 6zQesA8gt S550 35,5
Error in line 27: we1eeS A851 39,4
Error in line 19: vDw3 A851 92,5
